# phos

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: app.rs  ui.rs
data-network/: Cargo.toml
data-network-precompiles/: Cargo.toml
data-network-precompiles/src/: lib.rs
data-network-proto/: Cargo.toml  README.md  build.rs
data-network-proto/src/: lib.rs
data-network/src/: builder.rs  consensus.rs  database.rs  evm.rs  lib.rs
data-network/src/config/: base.rs  mod.rs  networks.rs  types.rs
data-network/src/rpc/: http_rpc.rs
examples/ios/: .gitignore  copy_bindings.sh
examples/ios/DataNetworkDemo/: DataNetworkNodeView.swift  Info.plist
examples/ios/DataNetworkDemo.xcodeproj/: project.pbxproj
examples/ios/DataNetworkDemo/Assets.xcassets/DataSymbol.imageset/: Contents.json
light-client/: Cargo.toml
light-client-verifier/: Cargo.toml
light-client-verifier/src/operations/: voting_power.rs
light-client/src/: components.rs  lib.rs
node-uniffi/: Cargo.toml  build-ios.sh
node-uniffi/src/: lib.rs
node-uniffi/src/types/: config.rs  network.rs  subscriptions.rs
node-wasm/: Cargo.toml  package-lock.json  package.json  tsconfig.json
node-wasm/example/: README.md  index.html  package-lock.json  package.json
node-wasm/example/src/: main.ts  styles.css
node-wasm/src/: data_network.rs  storage.rs
precompiles/: Cargo.toml
precompiles/src/: error.rs  lib.rs
precompiles/src/ip_graph/: dispatch.rs  mod.rs
precompiles/src/storage/: evm.rs  hashmap.rs  mod.rs  thread_local.rs
proto/: Cargo.toml
