[workspace]
resolver = "2"
members = [
    "cli",
    "light-client",
    "light-client-verifier",
    "data-network",
    "data-network-proto",
    "data-network-precompiles",
    "node-wasm",
    "node-uniffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "=1.0.37", features = [
    "consensus",
    "network",
    "rlp",
    "rpc-types",
    "rpc-types-engine",
] }
alloy-primitives = { version = "1.6.1", default-features = false, features = ["std"] }
alloy-sol-types = { version = "1.6.1", default-features = false, features = ["std"] }
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
tokio = "1.49.0"
tokio-stream = "0.1.18"
uniffi = "0.29.2"
url = "2.5"
helios-exex-light-client = { path = "light-client" }
helios-exex-light-client-verifier = { path = "light-client-verifier" }
helios-exex-data-network = { path = "data-network", default-features = false }
helios-exex-data-network-proto = { path = "data-network-proto" }
helios-exex-data-network-precompiles = { path = "data-network-precompiles" }
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
protox = "0.8"
revm = { version = "=34.0.0", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
