[workspace]
resolver = "2"
members = [
    "cli",
    "light-client",
    "light-client-verifier",
    "data-network",
    "proto",
    "precompiles",
    "node-wasm",
    "node-uniffi",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parmenides-xyz/phos"

[workspace.dependencies]
alloy = { version = "=1.0.37", features = [
    "consensus",
    "network",
    "rlp",
    "rpc-types",
    "rpc-types-engine",
] }
alloy-primitives = { version = "1.6.1", default-features = false, features = ["std"] }
alloy-sol-types = { version = "1.6.1", default-features = false, features = ["std"] }
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
tokio = "1.49.0"
tokio-stream = "0.1.18"
uniffi = "0.29.2"
url = "2.5"
phos-light-client = { version = "0.1.1" }
phos-light-client-verifier = { version = "0.1.1" }
phos-data-network = { version = "0.1.2", default-features = false }
phos-proto = { version = "0.1.2" }
phos-precompiles = { version = "0.1.2" }
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
protox = "0.8"
revm = { version = "=34.0.0", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }

[patch.crates-io]
phos-helios-common = { git = "https://github.com/parmenides-xyz/helios.git", rev = "6a60c45ba4d629582c752e4e4eb13977ac3e802d" }
phos-helios-core = { git = "https://github.com/parmenides-xyz/helios.git", rev = "6a60c45ba4d629582c752e4e4eb13977ac3e802d" }
phos-helios-revm-utils = { git = "https://github.com/parmenides-xyz/helios.git", rev = "6a60c45ba4d629582c752e4e4eb13977ac3e802d" }
phos-helios-verifiable-api-client = { git = "https://github.com/parmenides-xyz/helios.git", rev = "6a60c45ba4d629582c752e4e4eb13977ac3e802d" }
phos-helios-verifiable-api-types = { git = "https://github.com/parmenides-xyz/helios.git", rev = "6a60c45ba4d629582c752e4e4eb13977ac3e802d" }
phos-light-client = { path = "light-client" }
phos-light-client-verifier = { path = "light-client-verifier" }
phos-data-network = { path = "data-network" }
phos-proto = { path = "proto" }
phos-precompiles = { path = "precompiles" }
