[package]
name = "helios-exex-data-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
async-trait = "0.1"
cometbft = { git = "https://github.com/cometbft/cometbft-rs.git", rev = "ac3db79c5807cd1d0b8b14a7b8199b8d79d6408d", default-features = false, features = ["rust-crypto"] }
cometbft-rpc = { git = "https://github.com/cometbft/cometbft-rs.git", rev = "ac3db79c5807cd1d0b8b14a7b8199b8d79d6408d", default-features = false, features = ["reqwest"] }
eyre = "0.6"
figment = { version = "0.10.7", features = ["toml", "env"] }
helios-common = { git = "https://github.com/parmenides-xyz/helios.git", rev = "098ad96e3b91191d81946f075210168a6f924d28" }
helios-core = { git = "https://github.com/parmenides-xyz/helios.git", rev = "098ad96e3b91191d81946f075210168a6f924d28" }
helios-exex-data-network-precompiles.workspace = true
helios-exex-light-client = { workspace = true, features = ["secp256k1"] }
helios-revm-utils = { git = "https://github.com/parmenides-xyz/helios.git", rev = "098ad96e3b91191d81946f075210168a6f924d28" }
prost = "0.13"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls-native-roots"] }
revm.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
