[package]
name = "helios-exex-node-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy.workspace = true
console_error_panic_hook = "0.1.7"
eyre = "0.6"
futures-util = "0.3"
helios-common = { package = "phos-helios-common", version = "0.11.1", git = "https://github.com/parmenides-xyz/helios.git", rev = "6a60c45ba4d629582c752e4e4eb13977ac3e802d" }
helios-exex-data-network.workspace = true
helios-exex-light-client.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
url = "2.5"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Storage", "Window"]
