[package]
name = "phos-precompiles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DATA Network EVM precompiles for Phos"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
num-bigint.workspace = true
revm.workspace = true
scoped-tls = "1.0"
thiserror = "1.0.37"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
