[package]
name = "phos-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DATA Network protobuf types for Phos"

[dependencies]
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true
prost-types.workspace = true
protox.workspace = true
